--- a/home/style.css
+++ b/home/style.css
@@ -173,8 +173,8 @@ nav > ul > li > a:hover::after {
     background-color: black;
     width: 100%;
 
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
 
     display: flex;
     flex-direction: column;
